# HeimdaLLM

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
dev_scripts/: changelog_extract.py  lint.sh
docs/: Makefile
docs/source/: api.rst  attack_surface.rst  bifrost.rst  conf.py  faq.rst  glossary.rst  hints.rst  index.rst  llm_quirks.rst  prompt_engineering.rst  quickstart.rst  reconstruction.rst  roadmap.rst  tutorials.rst  validation.rst
docs/source/api/: index.rst
docs/source/api/abc/: bifrost.rst  context.rst  envelope.rst  index.rst  llm_integration.rst  validator.rst
docs/source/api/bifrosts/: index.rst
docs/source/architecture/: bifrost.rst  index.rst
docs/source/attack-surface/: index.rst
docs/source/attack_surface/: sql.rst
docs/source/blog/: index.rst
docs/source/llm-quirks/: index.rst  sql.rst
docs/source/llm_quirks/: sql.rst
docs/source/quickstart/: index.rst  llm.rst  validation.rst
docs/source/reconstruction/: sql.rst
docs/source/tutorials/: index.rst
heimdallm/: bifrost.py  constraints.py  context.py  envelope.py  llm.py
heimdallm/bifrosts/sql/: bifrost.py  common.py  envelope.py  exc.py  reconstruct.py  utils.py  validator.py  visitors.py
heimdallm/llm_providers/: mock.py  openai.py
heimdallm/support/: github.py
notebooks/: README.md  demo.ipynb  pentest.ipynb  quickstart.ipynb  sakila-schema.sql
notebooks/constraints/: customer.py
notebooks/quickstart/: validation.ipynb
(+118 files in other folders)
