[tool.poetry]
name = "heimdallm"
version = "0.2.0"
description = "Construct trusted SQL queries from untrusted input"
homepage = "https://github.com/amoffat/HeimdaLLM"
repository = "https://github.com/amoffat/HeimdaLLM"
documentation = "https://heimdallm.readthedocs.io/en/latest/"
authors = ["Andrew Moffat <arwmoffat@gmail.com>"]
maintainers = ["Andrew Moffat <arwmoffat@gmail.com>"]
keywords = ["sql", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "AGPL-3.0"
readme = "README.md"
include = [
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "heimdallm/",
]
exclude = [
    "heimdallm/**/tests"
]

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.5"
openai = "^0.27.8"
structlog = "^23.1.0"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
mypy = "^1.3.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.2"
coverage = "^7.2.7"
flake8 = "^6.0.0"
ipykernel = "^6.23.3"
sphinx = ">=1.6,<7"
sphinx-rtd-theme = "^1.2.2"
toml = "^0.10.2"
types-toml = "^0.10.8.6"
munch = "^4.0.0"
mysql-connector-python = "^8.0.33"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"